@@ -11,7 +11,9 @@ SET(SOURCE_FILES
     unittests_iterators.cc
     unittests_mesh_copies.cc
     unittests_smart_tagger.cc
-    unittests_properties.cc)
+    unittests_properties.cc
+    unittests_tet_mesh_navigation.cc
+)
 
 if (NOT TARGET OpenVolumeMesh::OpenVolumeMesh)
     find_package(OpenVolumeMesh REQUIRED)
