@@ -1,5 +1,9 @@
 master:
-    -
+
+    - TetrahedralMeshTopologyKernel:
+	- Behaviour change: TetVertexIterator now starts with `from` vertex of first halfedge of first cell halfface (previously: `to` vertex of same halffedge) for consistency with get_cell_vertices(). 
+	- Feature: vertex_opposite_halfface(CellHandle, VertexHandle) as inverse of halfface_opposite_vertex
+	- Improvement: Optimized get_cell_vertices()
 
 Version 3.3.2 (2025-04-25)
   - Bugfix (behavioural change!): TopologyKernel::genus() would return wrong results if garbage collection is required (it used entity counts that included deleted elements)
